# xas_processor

./: .gitignore  BEAMTIME_CHECKLIST.md  BEAMTIME_USAGE.md  CHEAT_SHEET.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
astra_xas/: LICENSE  __init__.py  _config_utils.py  alignment.py  cli.py  config.py  edge_presets.py  export.py  grouping.py  gui.py  io.py  manifest.py  plotting.py  processor.py  self_absorption.py  signals.py  single_scan.py  spectrum_viewer.py
astra_xas/beamtime/: __main__.py  groups.py  watcher.py
configs/: README.md
docs/design/: phase_2_1_single_scan_dependency_analysis.md
examples/configs/: p_k_phosphoric_acid.json
tests/: test_beamtime_log_file.py  test_beamtime_phase3.py  test_cli_config.py  test_manifest.py  test_manifest_integration.py  test_single_scan.py
